# exercises

problemi/: CMakeLists.txt
problemi/boltzmannDistribution/: CMakeLists.txt  README.md  boltzmannDistribution.cpp
problemi/boltzmannDistribution/include/boltzmann/: boltzmann.h
problemi/boltzmannDistribution/src/: CMakeLists.txt  boltzmann.cpp
problemi/carnot/: CMakeLists.txt  README.MD  carnot.cpp
